# british_horse_racing

./: .gitignore  EDA.py  LICENSE  README.md  bayesian.py  bayesian_full.py  conclusion.py  config.yml  environment.yml  fixture_scraper.py  full_scraper.py  horse_jockey_scraper.py  horse_scraper.py  jockey_scraper.py  model.py  model_feature_spec.py  preprocessing.py  pyproject.toml  results_scraper.py  sequential_model.py  temp_model.py
horse_racing/: __init__.py  config.py
output/: bet_summary.txt  results_summary.txt
